--- a/_includes/index.html
+++ b/_includes/index.html
@@ -2,7 +2,7 @@
 <html lang="{{page.lang}}">
 
     <head>
-        {% if page.root == true %}
+        {% if false %}
         <script>
             var lang = ((window.navigator.languages && window.navigator.languages[0]) || window.navigator.userLanguage || window.navigator.language || window.navigator.systemLanguage).substr(0, 2).toLowerCase();
             av = {"ru":1,"it":1};
